--- a/Ejercicios/ejercicios2/notebooks/Ejemplo-Pandas-08.ipynb
+++ b/Ejercicios/ejercicios2/notebooks/Ejemplo-Pandas-08.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
-    "from pandas.tools.plotting import radviz\n",
+    "#from pandas.tools.plotting import radviz\n",
     "\n",
     "%matplotlib inline\n",
     "\n"
@@ -28,16 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_df = pd.read_json('data/data-demo-5.json')\n"
+    "mi_df = pd.read_json('data/data-demo-5.json')\n",
+    "mi_df2=mi_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +72,7 @@
        "      <th>0</th>\n",
        "      <td>elizalde</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>rené</td>\n",
+       "      <td>renÃ©</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -97,20 +98,27 @@
        "      <td>edad14</td>\n",
        "      <td>cristian</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>briceÃ±o</td>\n",
+       "      <td>edad15</td>\n",
+       "      <td>marco</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  apellidos    edad   nombres\n",
-       "0  elizalde     NaN      rené\n",
+       "0  elizalde     NaN     renÃ©\n",
        "1     cueva     NaN   enrique\n",
        "2  castillo  edad12    carlos\n",
        "3   salinas  edad13     pedro\n",
-       "4   andrade  edad14  cristian"
+       "4   andrade  edad14  cristian\n",
+       "5  briceÃ±o  edad15     marco"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,21 +216,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
